solved the alignment problem for the about us grid again

--- a/MyProject/CSS/style.css
+++ b/MyProject/CSS/style.css
@@ -622,6 +622,7 @@ img {
         display: grid;
         grid-template-columns: 1fr;
         place-items: center;
+        padding-right: 25px;
     }
 
 
